--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,4 @@
-<doctype html>
+<!doctype html>
 <html> 
 	<head> 
 		<title>Michelle Hayes &#124; 2015 Resum&eacute;</title>
@@ -31,5 +31,9 @@
 </ul> <ul class='skillset-right'> <li>Adobe Photoshop</li> <li>Adobe After Effects</li> <li>Interactive Design</li> </ul> </div> </div>
 
 <div class='right-column'> <div class='affiliations'> <h2>Affiliations</h2> <p> Sigma Delta Tau<br /> <span class='italic'>November 2013 &mdash; Present</span> </p> <p> AIGA<br /> <span class='italic'>January 2014 &mdash; Present</span> </p> </div>
-</div> </div> </body></html>
+</div> 
+</div> 
+</body>
+
+</html>
 
