--- a/resume/index.html
+++ b/resume/index.html
@@ -1,7 +1,9 @@
-<!doctype html>
+<!doctype HTML>
+
 <html> 
 	<head> 
 		<title>Michelle Hayes &#124; 2015 Resum&eacute;</title>
+		
 		<link type='text/css' href='files/css/styles.css' rel='stylesheet' /> 
 	</head>
 
