--- a/resume/index.html
+++ b/resume/index.html
@@ -27,7 +27,7 @@
 <div class='left-column'> 
 	<div class='experience'> <h2>Experience</h2> 
 	<div class='employer'> PANDORA &mdash; <span class='city'>Deptford, NJ</span> </div> 
-	<div class="description"> <div class='role'> Sales Associate | <span class='italic'>December 2014 &mdash; Present</span> </div> <p>Est cibo splendide ex. Ea nam reque alterum, mei no dico case soleat. Novum vivendum contentiones ei duo. Sumo detraxit abhorreant cum id, vis dicit instructior ne, vim nullam dicunt consectetuer eu. Ea munere everti assentior qui, id pro singulis laboramus. Volumus mediocrem explicari no nec, sumo moderatius in nam..</p> </div> </div>
+	<div class="description"> <div class='role'> Sales Associate | <span class='italic'>December 2014 &mdash; Present</span> </div> <p>Sumo detraxit abhorreant cum id, vis dicit instructior ne, vim nullam dicunt consectetuer eu. Ea munere everti assentior qui, id pro singulis laboramus. Volumus mediocrem explicari no nec, sumo moderatius in nam..</p> </div> </div>
 <div class='education'> <h2>Education</h2> <span class='school'>Rutgers University</span> &mdash; <span class='city'>Camden, NJ</span> 
 <div class='description'> <p>BS in Marketing <span class='italic'>2015</span></p> </div> <h3>Skillset</h3> <ul class='skillset-left'> <li>Typography</li> <li>Adobe Indesign</li> <li>Adobe Illustrator</li>
 </ul> <ul class='skillset-right'> <li>Adobe Photoshop</li> <li>Adobe After Effects</li> <li>Interactive Design</li> </ul> </div> </div>
