--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -25,7 +25,7 @@
 	<h1>Lorem ipsum dolor sit</h1>
 	<p class="h1text">Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 	<p><br>
-	<a href="#">Learn More</a></p></br>
+	<a href="#">Learn more</a></p></br>
 	</div>
 
 <hr class="second">
