--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -9,7 +9,7 @@
 	<div class='wrapper'>
 		<header class='header'> 
 			<img src="files/images/sixbase-logo.png">
-		</header> 
+		</header> <br>
 <hr>
 	<div class='navigation'> 
 		<a href="#">Home</a> 
@@ -32,11 +32,13 @@
 
 	<div class="recent">
 	<h2>Recent Products</h2>
-	<br>
+	<br><br>
 <div class="container">
    <div class="column-center">
    	<img src="files/images/product-2.jpg">
-   	<br><h3>Product #2</h3>
+   	<br>
+   	<br>
+   	<h3>Product #2</h3>
    	<p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
    	<p><br>
 	<a href="#">View Product</a></p></br>
@@ -44,7 +46,7 @@
 
    <div class="column-left">
    <img src="files/images/product-1.jpg">
-   <br><h3>Product #1</h3>
+   <br><br><h3>Product #1</h3>
    <p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
    <p><br>
 	<a href="#">View Product</a></p></br>
@@ -52,7 +54,7 @@
 
    <div class="column-right">
    <img src="files/images/product-3.jpg">
-   <br><h3>Product #3</h3>
+   <br><br><h3>Product #3</h3>
    <p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
    <p><br>
 	<a href="#">View Product</a></p></br>
