--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -1,60 +1,65 @@
-<!doctype html>
-<html>
-  <head>
-    <title>Sixbase</title>
+<!DOCTYPE html> 
+<html> 
+<head> 
+	<title>Assignment #1 | Sixbase Website</title> 
+	<link type='text/css' href='files/css/css.css' rel='stylesheet'>
+</head> 
 
-    <link rel='stylesheet' href='files/css/styles.css' />
-  </head>
+<body> 
+	<div class='wrapper'>
+		<header class='header'> 
+			<img src="files/images/sixbase-logo.png">
+		</header> 
+<hr>
+	<div class='navigation'> 
+		<a href="#">Home</a> 
+		<a href="#">Shop</a> 
+		<a href="#">Blog</a>
+		<a href="#">About</a> 
+		<a href="#">Contact</a> 
+	</div>
+	</div>
 
-  <body>
-    <header>
-      <div class='inner-wrapper'>
-        <h1 class='logo'>
-          <img src='files/img/sixbase-logo.png' alt='Sixbase Logo' />
-        </h1>
-        <nav>
-          <ul>
-            <li class='active'><a href=''>Home</a></li>
-            <li><a href=''>Shop</a></li>
-            <li><a href=''>Blog</a></li>
-            <li><a href=''>About</a></li>
-            <li><a href=''>Contact</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+	<div class="content"> 
+	<img src="files/images/desk-hero.jpg" style="width: 954px; height: auto; padding-bottom: 50px;">
+	<h1>Lorem ipsum dolor sit</h1>
+	<p class="h1text">Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+	<p><br>
+	<a href="#">Learn More</a></p></br>
+	</div>
 
-    <div class='content'>
-      <img src='files/img/desk-hero.jpg' alt='Desk Hero Image' />
-      <div class='main-section'>
-        <h2>Lorem ipsum dolor sit</h2>
-        <p>Vestibulum id ligula porta felis euismod semper. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-        <a href='' target='_blank'>Learn more</a>
-      </div>
-      <div class='recent-products'>
-        <div class='product'>
-          <img src='files/img/product-1.jpg' alt='Product #1' />
-          <h3>Product #1</h3>
-          <p>Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
-          <a href='' target='_blank'>View Product</a>
-        </div>
-        <div class='product'>
-          <img src='files/img/product-2.jpg' alt='Product #2' />
-          <h3>Product #2</h3>
-          <p>Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
-          <a href='' target='_blank'>View Product</a>
-        </div>
-        <div class='product'>
-          <img src='files/img/product-3.jpg' alt='Product #3' />
-          <h3>Product #3</h3>
-          <p>Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
-          <a href='' target='_blank'>View Product</a>
-        </div>
-      </div>
-    </div>
+<hr class="second">
 
-    <footer>
-      <img src='files/img/sixbase-logo-reversed.png' alt='Sixbase Logo' />
-    </footer>
-  </body>
+	<div class="recent">
+	<h2>Recent Products</h2>
+	<br>
+<div class="container">
+   <div class="column-center">
+   	<img src="files/images/product-2.jpg">
+   	<br><h3>Product #2</h3>
+   	<p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
+   	<p><br>
+	<a href="#">View Product</a></p></br>
+   </div>
+
+   <div class="column-left">
+   <img src="files/images/product-1.jpg">
+   <br><h3>Product #1</h3>
+   <p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
+   <p><br>
+	<a href="#">View Product</a></p></br>
+   </div>
+
+   <div class="column-right">
+   <img src="files/images/product-3.jpg">
+   <br><h3>Product #3</h3>
+   <p class="h2text">Maecenas faucibus mollis interdum. Vidid ella unto igula porta felis euismod semper.</p>
+   <p><br>
+	<a href="#">View Product</a></p></br>
+   </div>
+</div>
+<div class="bottom">
+	<img src="files/images/sixbase-logo-reversed.png">
+	</div>
+</body>
 </html>
