--- a/slideshow/index.html
+++ b/slideshow/index.html
@@ -16,7 +16,7 @@
     <header>
       <div id="inner-wrapper">
         <div id="logo">
-          <a href="http://ryjohnson.com">
+          <a href="http://meesh21.github.com">
             <h1>5</h1>
             <h2>Slideshow</h2>
           </a>
