--- a/header/index.html
+++ b/header/index.html
@@ -10,7 +10,7 @@
     <header>
       <div id="inner-wrapper">
         <div id="logo">
-          <a href="http://ryjohnson.com">
+          <a href="http://meesh21.github.com">
             <h1>1</h1>
             <h2>Header with Navigation</h2>
           </a>
