--- a/web-fonts/index.html
+++ b/web-fonts/index.html
@@ -11,7 +11,7 @@
     <header>
       <div id="inner-wrapper">
         <div id="logo">
-          <a href="http://ryjohnson.com">
+          <a href="http://meesh21.github.com">
             <h1>4</h1>
             <h2>Web Fonts</h2>
           </a>
