updated works page

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -15,7 +15,7 @@
             <li><a href="http://meesh21.github.com/contact">contact</li>
         </ul>
 </body>
-        <img src='files/img/portlogo.pdf' alt='Michelle Hayes' style='width: 50%; border: 0px solid #cccccc; margin-left: -800px; margin-right: 400px; margin-top: -500px; margin-bottom: 1000px; box-sizing: border-box;' position: fixed; />
+        <img src='files/img/portlogo.pdf' style='width: 50%; border: 0px solid #cccccc; margin-left: -800px; margin-right: 400px; margin-top: -500px; margin-bottom: 1000px; box-sizing: border-box;' position: fixed; />
         
 
           </a>
