--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -10,7 +10,7 @@
           <a href="http://meesh21.github.com/assignment2">
       <uL>
             <li>home<a href="http://meesh21.github.com/work"></li>
-            <li>work<a href="http://meesh21.github.com/about"></li>
+            <li>work<a href="http://meesh21.github.com/resume"></li>
             <li>about</li>
             <li><a href="http://meesh21.github.com/contact">contact</li>
         </ul>
