--- a/work/index.html
+++ b/work/index.html
@@ -10,26 +10,13 @@
     <script src="files/js/magnific.js"></script>
     <script src="files/js/utilities.js"></script>
 
-  <body>
-    <header>
-      <div id="inner-wrapper">
-        <div id="logo">
-          <a href="http://meesh21.github.com">
-            <h2>Michelle Hayes</h2>
-          </a>
-        </div>
-        <div id="nav">
-          <ul>
-            <li class='active'><a href="http://meesh21.github.com" target="_self">Home</a></li>
-            <li><a href="http://meesh21github.com/blog" target="_self">About</a></li>
-            <li><a href="http://meesh21.github.com/about" target="_self">Work</a></li>
-            <li><a href="http://meesh21.github.com/about" target="_self">Resume</a></li>
-            <li><a href="http://meesh21.github.com/contact" target="_self">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-  </head>
+    <body>
+<a href="http://meesh21.github.com/assignment2">
+      <uL>
+            <li>back<a href="http://meesh21.github.com/work">
+</body>
+
+
 
     <div id="content">
       <div id="section">
